# Pages

./: CV.html  README.md  contact.html  index.html  projects.html  styles.css
CV/: index.html  publications.html  styles.css
MySim_SRC/: HowTo
MySim_SRC/MySimII/: CMakeLists.txt  Init.py  ObjectsMySimII.py
MySim_SRC/MySimII/App/: AppMySimII.cpp  CMakeLists.txt  FemMeshPy.h  MySimIIAnalysis.cpp  MySimIIAnalysis.h  MySimIIBoundariesObject.cpp  MySimIIBoundariesObject.h  MySimIIForcesObject.cpp  MySimIIForcesObject.h  MySimIIInitiativesObject.cpp  MySimIIInitiativesObject.h  MySimIILocalRunObject.cpp  MySimIILocalRunObject.h  MySimIIMaterialsObject.cpp  MySimIIMaterialsObject.h  MySimIIMeshBoundariesObject.cpp  MySimIIMeshBoundariesObject.h  MySimIIMeshCreateObject.cpp  MySimIIMeshCreateObject.h  MySimIIMeshNodesObject.cpp  MySimIIMeshNodesObject.h  MySimIIMeshRegionsObject.cpp  MySimIIMeshRegionsObject.h  MySimIISolversObject.cpp  MySimIISolversObject.h  PreCompiled.h  tmp.src
MySim_SRC/MySimII/Gui/: .Animat.cpp.swp  .Boundaries.cpp.swn  .Boundaries.cpp.swo  .Boundaries.cpp.swp  .Command.cpp.swp  .Contours.cpp.swo  .Contours.cpp.swp  .Geometry.cpp.swp  Animat.cpp  Animat.h  Animat.ui  AppMySimIIGui.cpp  AppMySimIIGuiPy.cpp  Boundaries.cpp  Boundaries.h  Boundaries.ui  CMakeLists.txt  Command.cpp  CommonFunction.cpp  CommonFunction.h  Contours.cpp  Contours.h  Contours.ui  FrequencySweep.cpp  FrequencySweep.h  FrequencySweep.ui  GeoFormat.cpp  Geometry.cpp  Geometry.h  Glyphs.cpp  Glyphs.h  Glyphs.ui  InitialMesh.cpp  InitialMesh.h  InitialMesh.ui  MeshView.cpp  MeshView.h  MeshView.ui  PreCompiled.h  ProjectView.cpp  (+43 more)
MySim_SRC/MySimII/Gui/Resources/: MySimII.qrc
MySim_SRC/MySimII/Gui/Resources/ui/: Boundaries.ui  Forces.ui  Initiatives.ui  LocalRun.ui  Materials.ui  Materials01.ui  MeshCreate.ui  MeshCreate0.ui  MeshNodes.ui  MeshRegions.ui  Simulation.ui  Solvers.ui
MySim_SRC/MySimII/MySimIIGuiObjects/: _MySimIIMeshRegions.py  _ViewProviderMySimIIBoundaries.py  _ViewProviderMySimIIForces.py  _ViewProviderMySimIIInitiatives.py  _ViewProviderMySimIIMaterials.py  _ViewProviderMySimIIMeshBoundaries.py  _ViewProviderMySimIIMeshCreate.py  _ViewProviderMySimIIMeshNodes.py  _ViewProviderMySimIIMeshRegions.py  _ViewProviderMySimIIProperties.py
MySim_SRC/MySimII/MySimIIObjects/: _MySimIIBoundaries.py  _MySimIIForces.py  _MySimIIInitiatives.py  _MySimIIMaterials.py  _MySimIIMeshBoundaries.py  _MySimIIMeshCreate.py  _MySimIIMeshNodes.py  _MySimIIMeshRegions.py  _MySimIIProperties.py
MySim_SRC/MySimII/MySimIIcommands/: commands.py  manager.py
Projects/BSMesher/: index.html
Projects/EML/: index.html  styles.css
Projects/HemoDyn/: DeepXDE.py  README.md  index.html  index_cn.html  styles.css
Projects/Lasers/: FREECAD_STEP_EXPORT.md  geometry-viewer.js  index.html  profile2d-viewer.js  styles.css  telecom_laser_geo2d_mesh.json  telecom_laser_geo2d_model.json  telecom_laser_geometry.json  telecom_laser_geometry.vtu  telecom_laser_geometry_freecad.FCMacro  telecom_laser_profile2d.json
Projects/Lasers/diagnostics_laser_coupled/: robustness_validation_results.csv
Projects/MicroClimate/: index.html  styles.css
Projects/MySim/: index.html  styles.css
Projects/MySim/MySimII/: InitGui.py  MySimII.pyd  MySimIIGui.pyd
Projects/MySim/MySimII/MySimIIGuiObjects/: FemSelectionWidgets.py  MySimIISelectionWidgets.py  _ViewProviderMySimIIBoundaries.py  _ViewProviderMySimIIForces.py  _ViewProviderMySimIIInitiatives.py  _ViewProviderMySimIILocalRun.py  _ViewProviderMySimIIMaterials.py  _ViewProviderMySimIIMeshBoundaries.py  _ViewProviderMySimIIMeshCreate.py  _ViewProviderMySimIIMeshRegions.py  _ViewProviderMySimIISimulation.py  _ViewProviderMySimIISolvers.py
Projects/MySim/MySimII/MySimIIObjects/: _MySimIIBoundaries.py  _MySimIIForces.py  _MySimIIInitiatives.py  _MySimIILocalRun.py  _MySimIIMaterials.py  _MySimIISimulation.py  _MySimIISolvers.py
Projects/MySim/MySimII/MySimIIcommands/: commands.py  manager.py
Projects/MySim/MySimII/MySimIIsolver/elmer/: sifio.py  writer.py
Projects/MySim/MySimII/MySimIItools/: PartsCheck.py  gmshtools_zw.py
Projects/MySim/MySimII/Resources/ui/: Boundaries.ui  Forces.ui  Initiatives.ui  LocalRun.ui  LocalRun1.ui  LocalRun2.ui  LocalRun3.ui  LocalRun4.ui  Materials.ui  Materials01.ui  MeshBoundaries.ui  Simulation.ui  Solvers.ui
Projects/PINN/: index.html  styles.css
Projects/libs/: index.html  styles.css
Research/: index.html
ZJKJ/: index.html  publications.html
